vendor/fixed-macro/tests/compile-fail/types-not-a-number.rs
fn main() {
    fixed_macro::types::I4F4!("a");
}
