vendor/fixed-macro/tests/compile-fail/types-not-a-number.stderr
error: invalid fixed value: expected int or float
 --> $DIR/types-not-a-number.rs:2:31
  |
2 |     fixed_macro::types::I4F4!("a");
  |                               ^^^
